# datenwissenschaften

./: .gitignore  .pre-commit-config.yaml  README.md  config.example.yaml  pyproject.toml
.github/workflows/: publish.yml
src/datenwissenschaften/: __init__.py  accelerator.py  console.py  curriculum.py  logger.py  logging.py  model.py  parallelism.py  persistence.py  policy_manager.py  rollout_video.py  rollout_video_playback.py  roms.py  runtime.py  segmented_rollout.py  serialization.py  settings.py  state_trainer.py  trainer.py
src/datenwissenschaften/callbacks/: __init__.py  best_episode_callback.py  episode_record.py  episode_telemetry_callback.py  model_metadata_callback.py  save_model_callback.py  savestate_stagnation_callback.py  stop_training_callback.py  upload_episode_callback.py
src/datenwissenschaften/core/: __init__.py  config.py  protocols.py  session.py
src/datenwissenschaften/gym/: __init__.py
src/datenwissenschaften/helpers/: position.py
src/datenwissenschaften/neat/: checkpointer.py  config.py  evaluator.py  model.py  policy.py  population.py  reporter.py  serialization.py  torch_network.py
src/datenwissenschaften/ram/: __init__.py
src/datenwissenschaften/recurrent_rnd/: __init__.py  model.py
src/datenwissenschaften/retro/: __init__.py  discovery.py  environment.py  paths.py  savestates.py
src/datenwissenschaften/rnd/: __init__.py
src/datenwissenschaften/states/: __init__.py  explorer.py  machine.py  state.py  target.py  target_memory.py
src/datenwissenschaften/ui/: __init__.py  control.py  server.py  telemetry.py
src/datenwissenschaften/ui/frontend/: index.html  package-lock.json  package.json
src/datenwissenschaften/ui/frontend/src/: App.vue  FitnessHistogram.vue  MetricChart.vue  style.css
src/datenwissenschaften/ui/static/: index.html
src/datenwissenschaften/ui/static/assets/: index-6ieDpM1v.css  index-B4ywR6tb.css  index-B5_g8jWA.css  index-B_f3oj5j.css  index-BzGjIHL7.js  index-CJXxrOoW.js  index-CLk-jxwv.css  index-CfKIlcZ7.js  index-DbhzSGHH.js  index-Dr0O9qlU.js  index-SSTItG6w.css  index-s1kKKK1V.js
src/datenwissenschaften/vision/: encoder.py  enemy_learner.py  hybrid_encoder.py  template_detector.py
tests/: test_best_episode_callback.py  test_curriculum.py  test_enemy_learner.py  test_explorer.py  test_gym_curriculum.py  test_model_version.py  test_persistence.py  test_rollout_video.py  test_segmented_rollout.py  test_state_trainer.py  test_target_memory.py  test_telemetry_savestate_history.py  test_ui_control.py  test_upload_episode_callback.py
