[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datenwissenschaften"
version = "0.0.1"
description = "Python package for datenwissenschaften utilities."
readme = "README.md"
authors = [
    { name = "datenwissenschaften", email = "martin.franke@datenwissenschaften.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium>=1.3.0,<2.0.0",
    "numpy>=2.4.5,<3.0.0",
    "opencv-python>=4.13.0.92,<5.0.0.0",
    "python-dotenv>=1.2.2,<2.0.0",
    "requests>=2.34.2,<3.0.0",
    "rich>=15.0.0,<16.0.0",
    "stable-baselines3>=2.8.0,<3.0.0",
    "stable-retro>=1.0.0,<2.0.0",
    "torch>=2.12.0,<3.0.0",
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[dependency-groups]
dev = [
    "black>=26.5.0,<27.0.0",
    "ruff>=0.15.13,<1.0.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry]
package-mode = true
packages = [{ include = "datenwissenschaften", from = "src" }]
