[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datenwissenschaften"
version = "1.4.4"
description = "Core library for Retro Speedlab: A high-performance RL toolkit for classic games."
readme = "README.md"
authors = [
    { name = "datenwissenschaften", email = "martin.franke@datenwissenschaften.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium>=1.3.0,<2.0.0",
    "numpy>=2.4.5,<3.0.0",
    "opencv-python>=4.10.0.84,<5.0.0.0",
    "pyyaml>=6.0.3,<7.0.0",
    "requests>=2.34.2,<3.0.0",
    "stable-baselines3>=2.9.0,<3.0.0",
    "stable-retro>=1.0.0,<2.0.0",
    "torch>=2.12.0,<3.0.0",
    "itsdangerous>=2.2.0,<3.0.0",
    "loguru>=0.7.2,<1.0.0",
    "neat-python>=2.0.0,<3.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["reinforcement-learning", "retro-gaming", "stable-baselines3", "stable-retro", "ai", "gymnasium"]

[project.urls]
Homepage = "https://speedlab.datenwissenschaften.com"
Repository = "https://github.com/datenwissenschaften/datenwissenschaften"
Documentation = "https://speedlab.datenwissenschaften.com/getting-started"

[dependency-groups]
dev = [
    "black>=26.5.0,<27.0.0",
    "ruff>=0.15.13,<1.0.0",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry]
package-mode = true
packages = [{ include = "datenwissenschaften", from = "src" }]
