[build-system]
requires = ["poetry-core==2.4.1"]
build-backend = "poetry.core.masonry.api"

[project]
name = "datenwissenschaften"
version = "2.6.1"
description = "Core library for Retro Speedlab: A high-performance RL toolkit for classic games."
readme = "README.md"
authors = [
    { name = "datenwissenschaften", email = "martin.franke@datenwissenschaften.com" }
]
license = "GPL-3.0-only"
requires-python = ">=3.12,<3.13"
dependencies = [
    "gymnasium==1.3.0",
    "numpy==2.5.1",
    "opencv-python==4.13.0.92",
    "pyyaml==6.0.3",
    "requests==2.34.2",
    "redis==6.4.0",
    "stable-baselines3==2.9.0",
    "sb3-contrib==2.9.0",
    "stable-retro==1.0.1",
    "torch==2.12.1",
    "itsdangerous==2.2.0",
    "loguru==0.7.3",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
keywords = ["reinforcement-learning", "retro-gaming", "stable-baselines3", "stable-retro", "ai", "gymnasium"]

[project.urls]
Homepage = "https://speedlab.datenwissenschaften.com"
Repository = "https://github.com/datenwissenschaften/datenwissenschaften"
Documentation = "https://speedlab.datenwissenschaften.com/getting-started"

[dependency-groups]
dev = [
    "black==26.5.1",
    "ruff==0.15.20",
]

[tool.black]
line-length = 120
target-version = ['py312']

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.poetry]
package-mode = true
packages = [{ include = "datenwissenschaften", from = "src" }]
include = [{ path = "src/datenwissenschaften/ui/static", format = ["sdist", "wheel"] }]
